  more about it at http://wiki.dwoo.org/index.php/TemplateInheritance
+ Plugins: Added {loop} that combines {foreach} and {with}, see
  http://wiki.dwoo.org/index.php/Block:loop for details
+ Plugins: Added {do} that executes whatever you feed it whitout echoing the
  result, used internally for extends but you can use it if required
+ Syntax: Added shortcut for {$dwoo.const.*} using '%', for example you can use
  {%FOO} instead of {$dwoo.const.FOO}
+ Syntax: When using named parameters, typing a parameter name without any
  value is the same as typing param=true, for example {foo name="test" bar} and
  {foo name="test" bar=true} are equals, can be useful for very complex plugins
  with huge amounts of parameters.
+ Syntax: Added support for {$foo+=5}, {$foo="a"}, {$foo++} and {$foo--}
+ Syntax: Added shortcut for $dwoo.*, you can now use {$.foreach.foo} instead
  of {$dwoo.foreach.foo} for example, applies to all $dwoo.* vars
+ API: Added getSource(), getUid() and getResourceIdentifier() to Dwoo_ITemplate
+ API: Added setSecurityPolicy() too Dwoo_ICompiler and modified the arguments
  of its compile() method
+ API: Added a bunch of utility functions to Dwoo_Compiler, allowing compiled
  plugins to access more of the compiler internals
* Fixed a potential concurrency issue (thanks to Rasmus Schultz for the patch)
* Moved all files to Dwoo/Class.php excepted for the core Dwoo.php file
* Various performance improvements, including the removal of a lot of isset()
  calls. Doing {$foo} if foo is undefined will now display a PHP warning, but
  doing {foreach $foo}..{/foreach} will not however, that way you don't have
  to do {if isset($foo)} before the foreach, but automated isset() calls don't
  impact performance as much as they did before.
* API: Dwoo_ITemplate->clearCache now requires a Dwoo instance as its first arg,
  should not affect you unless you built a custom template class from scratch